Source/Letterbook.Web/wwwroot/css/app.css
/* ... */
.app .post-editor {
    position: sticky;
    bottom: calc(100% - 100vh);
    background: pink;
    order: 10;
}

.app .thread {
    article {
        margin-bottom: .125em;
    }

    .sibling-post {
        --lb-sibling-header-height: 2.625lh;
        max-width: 100%;
        min-width: calc(45% - 1rem);
        height: auto;
        max-height: 8lh;
        flex-grow: 1;
        flex-shrink: 0.3;
        width: -moz-available;
        width: -webkit-fill-available;

        .post-header {
            height: var(--lb-sibling-header-height);
            background-color: var(--pico-card-sectioning-background-color);
            padding: var(--pico-block-spacing-vertical) var(--pico-block-spacing-horizontal) calc(0.5 * var(--pico-block-spacing-vertical)) var(--pico-block-spacing-horizontal);
        }

        .post-body {
            height: calc(100% - var(--lb-sibling-header-height));
            background-color: var(--pico-card-background-color);
            padding: calc(0.5 * var(--pico-block-spacing-vertical)) var(--pico-block-spacing-horizontal);
            overflow: hidden;
            word-wrap: break-word;
            display: block;
            display: -webkit-box;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 4;
        }
    }

    .siblings {
        display: flex;
        flex-direction: row;
        gap: .75rem;
        overflow-y: scroll;
        margin-left: 2rem;
        margin-bottom: 1rem;
        max-height: 8lh;
        align-content: space-between;

        /*TODO temporary, remove the markup*/

        .post-footer {
            display: none;
        }

        ::-webkit-scrollbar {
            -webkit-appearance: none;
            width: 10px;
        }

        ::-webkit-scrollbar-thumb {
            border-radius: 5px;
            background-color: rgba(0, 0, 0, .5);
            -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
        }
    }
}

.app .profile {
    .profile-info {
        & > div {
            margin-bottom: 1em;
        }
    }

    .profile-controls {
        display: flex;
        flex-direction: row;
        gap: 0.5rem;
        justify-content: flex-end;
    }

    header {
        aspect-ratio: 4 / 1;
        position: relative;
        width: 100%;
        margin-bottom: .5em;
    }

    .profile-name-container {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        background: linear-gradient(180deg,
        hsl(from var(--pico-background-color) h s l / 0) 0%,
        hsl(from var(--pico-background-color) h s l / .5) 30%,
        hsl(from var(--pico-background-color) h s l / .5) 100%);

        &:hover, &:focus-within {
            background: hsl(from var(--pico-background-color) h s l / .8);
        }

        & > * {
            padding: 0;
            margin: 0;
        }
    }

    .profile-pic {
        width: 9em;
        height: 9em;
        margin: 0 1em 1em 0;
        float: left;
    }

    .profile-detail {
        flex-basis: auto;
        clear: both;
        display: flex;
        flex-direction: column;
        justify-content: center;

        & > * {
            margin: 0;
        }
    }

    .profile-main {
        flex-shrink: 1;
        flex-basis: auto;
    }

    .profile-stats {
        display: flex;
        gap: 1em;
        justify-content: space-around;
        width: 100%;
        flex-wrap: wrap;
    }

    .profile-custom-field-container {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        gap: 0.5em;
    }

    .profile-custom-field {
        border: var(--pico-muted-border-color) solid var(--pico-border-width);
        padding: 0 0.5em;
        flex: 1 1 auto;
        box-shadow: var(--pico-muted-border-color) 0 .0125em .25em;

        :hover, :focus-within {
            -webkit-line-clamp: none;
            max-height: none;
        }

        dt {
            display: -webkit-box;
            -webkit-line-clamp: 1;
            font-variant-caps: small-caps;
            max-height: 1lh;
            overflow: hidden;
        }

        dd {
            display: -webkit-box;
            -webkit-line-clamp: 2;
            -webkit-box-orient: vertical;
            max-height: 2lh;
            color: var(--pico-muted-color);
            margin-left: 1em;
            overflow: hidden;
        }
    }
}

.app .account {
    form {
        margin-bottom: 2rem;
        border-bottom: var(--pico-border-width) solid var(--pico-table-border-color);
        padding-bottom: 1rem;
    }

    .account-details :nth-last-child(1) {
        margin-bottom: revert;
        border-bottom: revert;
        padding-bottom: revert;
    }
}

.app .peer-list {
    .col-hostname {
        max-width: 8em;
    }

    .peer-link {
        width: 100%;
    }
}

.app .peer-detail {
    .restriction-item {
        display: flex;
        flex-direction: row;
        height: 1.5lh;
        align-items: center;

        input[type="date"] {
            width: initial;
        }

        .restriction-col {
            width: 16em;
        }

        label.when-enabled {
            margin-right: 1em;
        }

        .when-enabled {
            display: none;
            height: 1.5lh;
            padding-bottom: .25em;
            padding-top: .25em;
        }

        &:has(input:checked) .when-enabled {
            display: initial;
        }
    }
}
/* ... */

